tweak chapter main chapter pages' css. make the images as big as possible while keeping them smaller than the dimensions of the page excluding menus. fix overflow issue caused by position:relative in the same context nav

--- a/css/lumbrikus.css
+++ b/css/lumbrikus.css
@@ -151,6 +151,14 @@ a[data-lightbox]:only-of-type::before {
     border-bottom: 1px solid rgb(0, 0, 0);
     position:relative;
     z-index:10;
+
+    /* new rules */
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    justify-items: center;
+    align-items: center;
+    align-content: center;
 }
 
 @media screen and (min-width: 20em) {
@@ -930,7 +938,7 @@ figure.ord .opphav {
 }
 
 body.child-of-kapitler .internal-chapter-links {
-    margin-bottom: 6rem;
+    margin-bottom: 1rem;
 }
 
 .internal-chapter-links::after {
@@ -997,6 +1005,14 @@ body.child-of-kapitler .internal-chapter-links {
 
 li.kapitler a::after {
     background-position: 25% 0;
+}
+
+.site-main.kapittel-hovedside {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-content: center;
+    align-items:center;
 }
 
 body.kap-00 li.hovedside a::after,
@@ -1460,25 +1476,19 @@ h1,h2,h3,h4,h5,h6 {
     }
 }
 
-#chapter_mainpage_image_link:hover img,
-#chapter_mainpage_image_link:focus img {
-    border-color: orange;
-    box-shadow: 0 0 .75em rgba(0,0,0,1);
+.chapter_bigpicture img {
+    max-height: calc(100vh - 8rem);
+    max-width: calc(100vw - 1rem);
+    box-shadow: 0 0 .5em rgba(0,0,0,0.4);
+    border: 2px solid black;
+    background-color: white;
+    padding: .25rem;
 }
 
-#chapter_mainpage_image_link img {
-    position: fixed;
-    top:8em;
-    left:0;
-    right:0;
-    bottom:1em;
-    margin:auto;
-    z-index: 0;
-    max-height: calc( 100% - 15em);
-    width: auto;
-    box-shadow: 0 0 .5em rgba(0,0,0,0.4);
-    border: 5px solid black;
-    padding: .75em;
+.chapter_bigpicture:hover img,
+.chapter_bigpicture:focus img {
+    border-color: orange;
+    box-shadow: 0 0 .75em rgba(0,0,0,1);
 }
 
 
@@ -1586,8 +1596,6 @@ dd::before {
 		font-size:0;
 		width: 1rem;
 		height: 1rem;
-		position:relative;
-		
 	}
 	
 	#same_context_nav .prev-chapter-link a::after,
